# proc_control

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  NOTUSED_CMakeLists.txt  NOTUSED_package.xml  README.md  controllers.xml  package.xml  packageInfo.mat
.devcontainer/: devcontainer.json
.github/workflows/: docker-image-perception-develop.yml  docker-image-perception-feature.yml  docker-image-perception-fix.yml  docker-image-perception-master.yml
cfg/: Algorithm_reconf.cfg  Bbox.cfg  Bbox_reconf.cfg  Controller_reconf.cfg  Node_reconf.cfg  PID4Axis_reconf.cfg  PID6Axis_reconf.cfg  PIDController.cfg  PIDController_reconf.cfg  PIDZAxis_reconf.cfg  PPIController.cfg  PPIController_reconf.cfg  Thruster.cfg  Thruster_reconf.cfg  controller_params.cfg
config/: AUV7.yaml  AUV8.yaml  AUV8_V2.yaml  Algorithm.yaml  BoundingBox.yaml  LOCAL.yaml  controllers.yaml  node.yaml  proc_control_conf.yaml  thruster.yaml  thruster8.yaml  thruster_ex.yaml
config/ControllersParameters/: PPIParameters.yaml  x_position_controller_parameters.yaml  y_position_controller_parameters.yaml  yaw_position_controller_parameters.yaml  yaw_velocity_controller_parameters.yaml  z_position_controller_parameters.yaml  z_velocity_controller_parameters.yaml
config/Controllers_parameters/: pitch_controller_parameters.yaml  pitch_position_controller_parameters.yaml  pitch_velocity_controller_parameters.yaml  roll_controller_parameters.yaml  roll_velocity_controller_parameters.yaml  x_controller_parameters.yaml  x_position_controller_parameters.yaml  x_velocity_controller_parameters.yaml  y_controller_parameters.yaml  y_position_controller_parameters.yaml  y_velocity_controller_parameters.yaml  yaw_controller_parameters.yaml  yaw_position_controller_parameters.yaml  yaw_velocity_controller_parameters.yaml  z_controller_parameters.yaml  z_position_controller_parameters.yaml  z_velocity_controller_parameters.yaml
config/OpenLoopMotors/: Depth_15.txt  Depth_20.txt  Depth_25.txt  Depth_30.txt  Depth_5.txt  Pitch_10.txt  Pitch_15.txt  Pitch_20.txt  Pitch_25.txt  Pitch_30.txt  Pitch_5.txt  Pitch_m10.txt  Pitch_m15.txt  Pitch_m20.txt  Pitch_m25.txt  Pitch_m30.txt  Pitch_m5.txt  Roll_d10.txt  Roll_d15.txt  Roll_d20.txt  Roll_d25.txt  Roll_d30.txt  Roll_d5.txt  Roll_g10.txt  Roll_g15.txt  Roll_g20.txt  Roll_g25.txt  Roll_g30.txt  Roll_g5.txt  SpinR_10.txt  backward_10.json  depth_10.json  depth_15.json  depth_20.json  depth_25.json  depth_30.json  depth_5.json  forward_10.json  test_phases.json
config/algorithm_config/: PID.yaml  PID4Axis.yaml  PID6Axis.yaml  PIDZAxis.yaml
docs/: AlgorithmConfig.dox  AlgorithmConfig.wikidoc  NodeConfig.wikidoc  PID4AxisConfig-usage.dox  PID4AxisConfig.dox  PID4AxisConfig.wikidoc  PIDConfig-usage.dox  PIDZAxisConfig-usage.dox  PIDZAxisConfig.dox  PIDZAxisConfig.wikidoc  ThrusterConfig.dox  ThrusterConfig.wikidoc  ThrusterConfigurationConfig-usage.dox  ThrusterConfigurationConfig.wikidoc  ThrusterEffortConfig-usage.dox  ThrusterEffortConfig.dox
docs/OldSystem/: PositionController.java  ThrusterController.java
include/proc_control/: DropConstraint_WeoWKk5T.h  MW_custom_RTOS_header.h  binsearch_u32d_prevIdx.h  binsearch_u32u16_prevIdx.h  div_nde_s32_floor.h  log2_tqJQ4MCN.h  maximum_2WBZsTXd.h  minimum_oAlBKO5n.h  norm_O1dug2SE.h  norm_iyYRsc5O.h  norm_kmLwQG6Z.h  plook_u32d_binckpan.h  plook_u32d_binckpang.h  plook_u32u16_binckpan.h  proc_control.h  proc_control_ctrlr_host.h  proc_control_private.h  proc_control_types.h  recomputeBlockDiag_9NUDN6dk.h  rtGetInf.h  rtGetNaN.h  rt_atan2d_snf.h  rt_defines.h  rt_nonfinite.h  rt_nrand_Upu32_Yd_f_pw_snf.h  rt_powd_snf.h  rt_urand_Upu32_Yd_f_pw_snf.h  rtmodel.h  rtwtypes.h  slros_busmsg_conversion.h  slros_initialize.h  trisolve_EJJQtYPf.h  trisolve_UChH74db.h  trisolve_mVavopKa.h  trisolve_z4HE1wD4.h  updateWeights_c4xfjVr4.h  updateWeights_dKqAUqjH.h  visibility_control.h  xgemv_1AZjJHaA.h  xgemv_A0CRQV1p.h  (+23 more)
launch/: auv_simulation.launch  full_loop.launch  proc_control.launch  proc_control_node.launch
msg/: TargetReached.msg  ThrustLogging.msg  Thruster.msg  ThrusterEffort.msg
proc_control/: README.md  package.xml
proc_control/docs/: AlgorithmConfig-usage.dox  NodeConfig-usage.dox  NodeConfig.dox  PID4AxisConfig-usage.dox  PIDConfig.dox  PIDConfig.wikidoc  UML.dia
proc_control/launch/: proc_control.launch
proc_control/msg/: PositionTarget.msg
proc_control/script/: AuvSimulation.py  OdometrySimulation.py
proc_control/srv/: GetPositionTarget.srv  SetControlMode.srv
proc_control/test/: PID_actuation_test.cc  config_test.cc  control_test.cc  local_to_global_test.cc
proc_control_matlab/: CMakeLists.txt  package.xml
script/: AuvSimulation.py  DisableALL.sh  DisableDepth.sh  DisableXY.sh  DisableYaw.sh  EnableALL.sh  EnableDepth.sh  EnableXY.sh  EnableYaw.sh  PositionSimulation.py  Record_open_loop  Record_open_loop.sh  TCVU.py  ThrusterControl.py  ThrusterControlByValue.py  ThrusterControlByValueUltra.py  config_avance_10.txt  percentage_2_thrust.py  test_fichier.bag.active
src/: CMakeLists.txt  buildInfo.mat  codeInfo.mat  compileInfo.mat  main.cpp  package.xml  proc_control.cpp  proc_control.h  proc_control.rtw  proc_control_node.cpp  proc_control_node.h  proc_control_node_data.cpp  proc_control_node_private.h  proc_control_node_types.h  proc_control_private.h  proc_control_types.h  rosModelInfo.mat  rosnodeinterface.cpp  rosnodeinterface.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_defines.h  rt_nonfinite.cpp  rt_nonfinite.h  rt_zcfcn.cpp  rt_zcfcn.h  rtmodel.h  rtw_solver.h  rtwtypes.h  slros_busmsg_conversion.cpp  slros_busmsg_conversion.h  slros_generic_pubsub.h  slros_initialize.cpp  slros_initialize.h  visibility_control.h  writeCodeInfoFcn.m  zero_crossing_types.h
srv/: ControllerState.srv  EnableControl.srv  EnableThrusters.srv  SetBoundingBox.srv  SetControlMode.srv  SetDecoupledTarget.srv  SetLocalTarget.srv  SetPositionTarget.srv
test/: CMakeLists.txt  PID_actuation_test.cc  config_test.cc  control_test.cc  local_to_global_test.cc  matrix_test.cc  thrust_conversion_test.cc
(+437 files in other folders)
