catkin_add_gtest( config_test config_test.cc ${proc_control_FILES})
target_link_libraries(config_test pthread ${catkin_LIBRARIES} ${lib_atlas_LIBRARIES} yaml-cpp)
catkin_add_gtest( thrust_conversion thrust_conversion_test.cc ${proc_control_FILES})
target_link_libraries(thrust_conversion pthread ${catkin_LIBRARIES} ${lib_atlas_LIBRARIES} yaml-cpp)
catkin_add_gtest( control_test control_test.cc ${proc_control_FILES})
target_link_libraries(control_test pthread ${catkin_LIBRARIES} ${lib_atlas_LIBRARIES} yaml-cpp)